k8s/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hf-review
spec:
  finalizers:
  - kubernetes
