k8s/manifests/deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ruby-app
  namespace: hf-review
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ruby-app
  template:
    metadata:
      labels:
        app: ruby-app
    spec:
      containers:
        - name: ruby-app
          image: ruby-rails:3.3.0
          ports:
            - containerPort: 3000
